k8s/opendesk-edu/deploy-opendesk-opencloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: opendesk-opencloud
    app.kubernetes.io/component: collaboration
    app.kubernetes.io/managed-by: nix
    app.kubernetes.io/name: opendesk-opencloud
    app.kubernetes.io/part-of: opendesk
  name: opendesk-opencloud
  namespace: opendesk-edu
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: opendesk-opencloud
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: opendesk-opencloud
        app.kubernetes.io/component: collaboration
        app.kubernetes.io/managed-by: nix
        app.kubernetes.io/name: opendesk-opencloud
        app.kubernetes.io/part-of: opendesk
    spec:
      containers:
      - env:
        - name: OC_URL
          value: https://cloud.home.opendesk-edu.org
        - name: OC_INSECURE
          value: 'false'
        - name: OIDC_ISSUER
          value: https://id.home.opendesk-edu.org/realms/opendesk
        - name: OIDC_CLIENT_ID
          value: opendesk-opencloud
        - name: OIDC_CLIENT_SECRET
          value: opencloud-secret-change-me
        - name: OC_LOG_LEVEL
          value: info
        image: docker.io/opencloudeu/opencloud:latest
        imagePullPolicy: IfNotPresent
        name: opendesk-opencloud
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: '2'
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 1Gi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/opencloud
          name: data
        - mountPath: /etc/opencloud
          name: config
          readOnly: true
      dnsConfig:
        searches:
        - opendesk.svc.cluster.local
        - svc.cluster.local
        - cluster.local
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        runAsUser: 1000
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: opendesk-opencloud-data
      - name: config
        secret:
          defaultMode: 420
          secretName: opendesk-opencloud-config
