k8s/opendesk-edu/service-opendesk-opencloud.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: opendesk-opencloud
    app.kubernetes.io/component: collaboration
    app.kubernetes.io/managed-by: nix
    app.kubernetes.io/name: opendesk-opencloud
    app.kubernetes.io/part-of: opendesk
  name: opendesk-opencloud
  namespace: opendesk-edu
spec:
  clusterIP: 172.17.193.87
  clusterIPs:
  - 172.17.193.87
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: opendesk-opencloud
  sessionAffinity: None
  type: ClusterIP
